tests/ui/typech/trait_signature_mismatch_param.stderr
× error[LM4169]: implemented method does not match definition signature
   ╭─[trait_signature_mismatch_param.lm:6:5]
 5 │ use Foo in Int32 {
 6 │     fn foo(val: Int64) { }
   ∶     ^^^^^^^^^^^^^^^^^^^^^^ expected signature fn foo(val: Int32) -> Void, found fn foo(val: Int64) -> Void
 7 │ }
   ╰──