tests/ui/typech/trait_signature_mismatch_param.lm
trait Foo {
    pub fn foo(val: Int32);
}

use Foo in Int32 {
    pub fn foo(val: Int64) { }
}
